# gsp

./: README.md  Untitled.ipynb  pyproject.toml  setup_axolotl.sh
data/: actions.json  actions.txt  actions_short.json  concepts.txt  dev.txt  effects.txt  examples.json  properties.json  robot_capabilities.txt  script.txt
data/output/: out.json  result_parses.csv
data/tasks/dev/: CoRLTestOrdered.json  LLMParserGeneration.dict  ParserTestOrdered.json  ParserTestOrderedNoAutogen.json  screwingActionModificationTestOrdered.json  templatedict.dict
gsp/: cli.py  io.py  languages.py  pipelines.py  preparation.py  websvc.py
gsp/config/: prompts.py
gsp/config/model_config/: default-template-llama7b.yaml  parser-info_structure-30k-context-falcon-7b.yaml  parser-info_structure-30k-context-llama2-13b.yaml  parser-info_structure-30k-context-llama2-3b.yaml  parser-info_structure-30k-context-llama2-7b.yaml  parser-info_structure-30k-no-context-falcon-7b.yaml  parser-info_structure-30k-no-context-llama2-13b.yaml  parser-info_structure-30k-no-context-llama2-3b.yaml  parser-info_structure-30k-no-context-llama2-7b.yaml  translator-simple_english-30k-context-falcon-7b.yaml  translator-simple_english-30k-context-llama2-3b.yaml  translator-simple_english-30k-context-llama2-7b.yaml  translator-simple_english-30k-no-context-falcon-7b.yaml  translator-simple_english-30k-no-context-llama2-3b.yaml  translator-simple_english-30k-no-context-llama2-7b.yaml
notebooks/: PoC_V0.2.ipynb  PoC_v0.1.ipynb  PoC_v0.3.ipynb  PoC_v0.4.ipynb  PoC_v0.5-LMQL.ipynb  PoC_v0.5.ipynb  Untitled.ipynb  V1.ipynb  augment_dataset.ipynb  evaluation.ipynb  parsers_summary_table.csv  plots.ipynb  translators_summary_table.csv
references/: LLM-Translators-vs-Parser.bib
scripts/: evaluate.py  evaluation_setup.sh
