[tool.poetry]
name = "gsp"
version = "0.1.0"
description = "Code for work in grounded semantic parsing."
authors = ["Vasanth Sarathy <vsarathy@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.scripts]
gsp = "gsp.cli:main"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
click = "^8.1.3"
dash = "^2.9.3"
dash-bootstrap-components = "^1.4.1"
pandas = "^2.0.1"
jupyter = "^1.0.0"
ipykernel = "^6.23.0"
langchain = "^0.0.166"
llama-index = "^0.6.5"
gradio = "^3.30.0"
ndjson = "^0.3.1"
anthropic = "^0.2.10"
rich = {extras = ["jupyter"], version = "^13.4.2"}
opus-fast-mosestokenizer = "^0.0.8.3"
pathos = "^0.3.1"
tqdm = "^4.66.1"
bio = "^1.5.9"
googlebard = "^2.1.0"
nlpaug = "^1.1.11"
transformers = "^4.33.2"
sentencepiece = "^0.1.99"
requests = "^2.31.0"
simpletransformers = "^0.64.3"
nltk = "^3.8.1"
torch = { version = "2.0.0", source="torch"}
gensim = "^4.3.2"
sacremoses = "^0.0.53"
googletrans = "4.0.0rc1"
speechrecognition = "^3.10.0"
gtts = "^2.3.2"
pygame = "^2.5.2"
pocketsphinx = "^5.0.2"
pydub = "^0.25.1"
llvmlite = "^0.40.1"
librosa = "^0.10.1"
numba = "^0.57.1"
numpy = "1.24"
matplotlib = "^3.8.0"
soundfile = "^0.12.1"
lmql = "^0.0.6.6"
jsonformer = "^0.12.0"
translators = "^5.8.5"
pyparsing = "^3.1.1"

[[tool.poetry.source]]
name = "torch"
url = "https://download.pytorch.org/whl/cpu"
secondary = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
